--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,16 +2,18 @@ li {
     list-style: none;
     
 }
+.header-nav-link:hover,
+.header-nav-link:focus
+{
+    color: #2196F3;
+}
 
 a {
 
 text-decoration: none;
 
 }
-.nav-link
-{
-color: #2196F3;
-}
+
 .nav-link-st
 {
 color: #2196F3;
@@ -22,7 +24,7 @@ color: #2196F3;
 font-family: 'Raleway';
 font-weight: 700;
 font-size: 26px;
-line-height: 0.8387;
+line-height: 1.1923;
 letter-spacing: 0.03em;
 color: #2196F3;
 
@@ -32,7 +34,7 @@ color: #2196F3;
 
 font-weight: 700;
 font-size: 26px;
-line-height: 0.8387;
+line-height: 1.1923;
 letter-spacing: 0.03em;
 color: #000000;
 }
@@ -40,15 +42,24 @@ color: #000000;
 {
 font-weight: 500;
 font-size: 14px;
-line-height: 0.875;
+line-height: 1.1428;
 letter-spacing: 0.02em;
 }
+.header-text
+{
+font-weight: 500;
+font-size: 14px;
+line-height: 1.1428;
+letter-spacing: 0.02em;
+}
+
+
 
 .Studio-white {
 font-family: 'Raleway';
 font-weight: 700;
 font-size: 26px;
-line-height: 0.8387;
+line-height: 1.1923;
 letter-spacing: 0.03em;
 color: #ffffff;
 }
@@ -62,32 +73,27 @@ body{
     color: #212121;
     
 }
-.header-text
-{
-font-weight: 500;
-font-size: 14px;
-line-height: 0.8531;
-letter-spacing: 0.02em;
+
 }
 .contacts
 {
     font-weight: 500;
     font-size: 14px;
-    line-height: 0.8531;
+    line-height: 1.1428;
     letter-spacing: 0.02em;
 }
 .tel-gray
 {
     font-weight: 500;
     font-size: 14px;
-    line-height: 0.8531;
+    line-height: 1.1428;
     letter-spacing: 0.02em;
     color: #757575;  
 }
 .title-h1 {
     font-weight: 900;
     font-size: 44px;
-    line-height: 0.7333; 
+    line-height: 1.3636; 
     letter-spacing: 0.06em;
     text-transform: uppercase;
     
@@ -101,7 +107,7 @@ letter-spacing: 0.02em;
 {
 font-weight: 700;
 font-size: 16px;
-line-height: 2.5333;
+line-height: 1.875;
 letter-spacing: 0.06em;
 cursor: pointer;
 background: #2196F3;
@@ -111,13 +117,13 @@ color: #FFFFFF;
 {
 font-weight: 700;
 font-size: 14px;
-line-height: 0.875;
+line-height: 1.1428;
 letter-spacing: 0.03em
 }
 .section2-title-p
 {
 font-size: 14px;
-line-height: 0.5833;
+line-height: 1.7142;
 letter-spacing: 0.03em;
 color: #757575;
 }
@@ -125,35 +131,29 @@ color: #757575;
 {
 font-weight: 700;
 font-size: 14px;
-line-height: 0.8531;
+line-height: 1.1428;
 letter-spacing: 0.03em;
 }
 .section-title-text
 {
 font-weight: 700;
 font-size: 36px;
-line-height: 0.8751;
+line-height: 1.1666;
 letter-spacing: 0.03em;
 }
 .section-name
 {
 font-weight: 500;
 font-size: 16px;
-line-height: 0.8421;
+line-height: 1.1875;
 letter-spacing: 0.03em;
 }
-.section-name-p
-{
-font-size: 16px;
-line-height: 0.8421;
-letter-spacing: 0.03em;
-color: #757575;
-}
+
 
 .footer-google
 {
     font-size: 14px;
-line-height: 0.5833;
+line-height: 1.7142;
 letter-spacing: 0.03em;
 color: #FFFFFF;
 }
@@ -167,7 +167,7 @@ color: #FFFFFF;
 .profession
 {
 font-size: 16px;
-line-height: 0.8421;
+line-height: 1.1875;
 letter-spacing: 0.03em;
 color: #757575;
 }
@@ -175,7 +175,7 @@ color: #757575;
 cursor: pointer;
 font-weight: 500;
 font-size: 16px;
-line-height: 0.6153;
+line-height: 1.625;
 letter-spacing: 0.03em;
 background: #F5F4FA;
 border: none;
@@ -188,12 +188,12 @@ color: #FFFFFF;
 .portfolio-title {
 font-weight: 700;
 font-size: 18px;
-line-height: 0.5;
+line-height: 2.0000;
 letter-spacing: 0.06em;
 }
 .portfolio-paragraf {
     font-size: 16px;
-    line-height: 0.5333;
+    line-height: 1.875;
     letter-spacing: 0.03em;
     color: #757575; 
 }
